syntax = "proto3";
option java_package = "net.fixfixt.fixaide.api";

import "google/protobuf/any.proto";

service CrudService {
    rpc Create(Envelope) returns (Envelope);
    rpc Read(Envelope) returns (Envelope);
    rpc Update(Envelope) returns (Envelope);
    rpc Delete(Envelope) returns (Envelope);
    rpc Find(Envelope) returns (stream Envelope);
    rpc FindAll (Envelope) returns (stream Envelope);

    rpc subscribe (SubRequest) returns (stream SubResponse);

}

message Empty {
}

message Envelope {
    Direction direction = 1;

    string request_id = 2;
    string response_id = 3;

    PayloadEnc payload_enc = 4;

    string str_payload = 5;
    google.protobuf.Any proto_payload = 6;

    enum Direction {
        REQUEST = 0;
        RESPONSE = 2;
    }

    enum PayloadEnc {
        PLAIN = 0;
        JSON = 1;
        XML = 2;
        PROTO = 3;
    }
}

message SubRequest {
    string topic = 1;
    string event_type = 2;
}

message SubResponse {
    RespType respType = 1;
    google.protobuf.Any data = 2;
    string str_data = 3;

    enum RespType {
        SUB_SUCC = 0;
        SUB_FAIL = 1;
        PUB_DATA = 2;
    }
}

